--- a/leighton-component-photo-carousel-master 3/package.json
+++ b/leighton-component-photo-carousel-master 3/package.json
@@ -28,6 +28,7 @@
     "faker": "^4.1.0",
     "morgan": "^1.9.1",
     "mysql2": "^1.6.4",
+    "newrelic": "^5.6.0",
     "react": "^16.8.1",
     "react-dom": "^16.8.1",
     "sequelize": "^4.42.0",
